2005-09-09  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/dbi.py (getConnection): added optional argument,
	"create", defaulting to True, so that it is possible to call
	getConnection(alias, 0) and get None if there is no connection
	around, which you might want sometimes.

	* src/pydo/operators.py (_repr_between): fix for BETWEEN operator.

2005-09-06  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/__init__.py (__version__): upping to 2.0b2.

	* src/pydo/base.py (PyDO._new): for postgresql's sake, now call
	dbi.getSequence with the schema-qualified table name.

	* tests/test_dbi.py (test_describeTable1): psycopg-only test for
	describeTable with non-default schema.

	* src/pydo/drivers/psycopgconn.py (PsycopgDBI.describeTable): 
	fix for when the schema is not 'public'.

2005-08-27  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document the acceptance of strings in
	associations.

	* src/pydo/base.py (ManyToMany, ForeignKey, OneToMany): now
	accepts strings instead of PyDO classes to facilitate forward
	declarations of associations; ManyToMany fixed.

2005-08-26  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/utils.py (string_to_obj): evil magic function.

2005-08-19  Jacob Smullyan  <smulloni@smullyan.org>
	* src/pydo/dbi.py (initAlias): typo -- forgot to assign to "sql".
	Thanks Matt B.
	
	* src/pydo/base.py (PyDO._processWhere): fix for updateSome bug --
	when passing a sql string to processWhere with a converter, values
	preexisting in the converter were ignored.

	* tests/test_base.py (test_updateSome3): test for updateSome bug
	found by Matthew Bogosian.

2005-08-18  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/dbi.py (DBIBase.endConnection): method equivalent to
	del self.conn.  Also removed autocommit -- the implementation in
	use only worked for sqlite -- and stopped referring to autocommit
	in internal dbi code, so it is no longer a performance hit and its